--- a/src/StealthInject/StealthInject.vcxproj
+++ b/src/StealthInject/StealthInject.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <ClCompile Include="StealthInject.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StealthInject.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
